--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -6,11 +6,12 @@
     <title>TaskChest</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./style.css">
     <script defer src="./script.js"></script>
+    <script src="../../components/card.js"></script>
 </head>
-<body class="bg-default-color">
+<body class="bg-default">
     <nav class="navbar navbar-expand-lg bg-navbar-color nav-shadow">
         <div class="container-fluid d-flex justify-content-between">
             <a class="navbar-brand fs-2 text-white" href="#">TaskChest</a>
@@ -20,20 +21,11 @@
             </div>
         </div>
     </nav>
-    <main class="grid p-3">
-        <div class="card text-center border border-5 border-primary rounded-4 g-col-3">
-            <div class="card-header bg-primary text-white">
-              Featured
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-            <div class="card-footer text-white bg-primary text-white">
-              2 days ago
-            </div>
-        </div>
+    <main class="grid p-3 " style='--bs-columns: 4'>
+        
     </main>
+    <script>
+        document.querySelector('main').appendChild(new Card('dia-a-dia', 0, '2025-01-07', 'Lavar a louça', 'Lavar a louça, pois a pia está imunda'))
+    </script>
 </body>
 </html>
