Componentes login e taskManager

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -22,10 +22,9 @@
         </div>
     </nav>
     <main class="grid p-3 " style='--bs-columns: 4'>
-        
     </main>
     <script>
-        document.querySelector('main').appendChild(new Card('dia-a-dia', 0, '2025-01-07', 'Lavar a louça', 'Lavar a louça, pois a pia está imunda'))
+        document.querySelector('main').appendChild(new Card('estudos', 1, '2025-01-07', 'Lavar a louça', 'Lavar a louça, pois a pia está imunda'))
     </script>
 </body>
 </html>
